--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -202,6 +202,7 @@
   padding: 10px 16px;
   background: var(--background-tertiary);
   border-radius: 16px 0 0 0;
+  white-space: nowrap;
 }
 
 .modal__header-graph {
