--- a/src/css/components/componentNewPost.css
+++ b/src/css/components/componentNewPost.css
@@ -22,6 +22,23 @@
   text-decoration: none;
 }
 
+.modal__header-big {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.modal__close-big {
+  background: none;
+  border: none;
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  top: 10px;
+}
+
 .new-post-section-title {
   font-weight: 500;
   font-size: 18px;
@@ -530,6 +547,20 @@
   border: 1px solid rgba(234, 235, 239, 1);
 }
 
+.modal-button-exit {
+  border: none !important;
+  flex: 1;
+  padding: 8px 39px;
+  border-radius: 100px;
+  font-size: 15px;
+  line-height: 18px;
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: 0.1px;
+}
+
 .modal-button--add {
   background: var(--background-secondary);
   color: var(--background-tertiary);
@@ -540,6 +571,10 @@
   flex-direction: column;
   gap: 8px;
   width: 100%;
+}
+
+.new-post-attachments-container.has-items {
+  margin-top: 24px;
 }
 
 .new-post-attachments-container__item {
@@ -565,7 +600,7 @@
   font-size: 15px;
   line-height: 18px;
   letter-spacing: 0px;
-  color: var(--background-secondary);
+  color: var(--background-tertiary);
 }
 
 .new-post-attachments-container__item-controls {
@@ -576,7 +611,7 @@
 
 .new-post-attachments-container__item-controls-icon {
   width: 100%;
-  height: 100%;
+  height: 49px;
 }
 
 .new-post-attachments-container__item-grip-text {
@@ -651,6 +686,16 @@
   cursor: pointer;
 }
 
+.modal__close-exit {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0px;
+}
+
 .modal.modal-exit .modal__text {
   font-weight: 400;
   font-size: 14px;
@@ -714,4 +759,83 @@
   font-size: 14px;
   line-height: 20px;
   color: rgba(133, 111, 255, 1);
+}
+
+.link-preview-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.link-preview-container {
+  padding-block-end: 16px;
+  border-radius: 8px;
+}
+
+.link-preview-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.link-preview-url {
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 16px;
+  letter-spacing: 0px;
+  color: var(--slider);
+}
+
+.link-preview-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0px;
+  color: var(--text-primary);
+}
+
+/* Стили для переключателя */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 48px;
+  height: 26px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(234, 235, 239, 1);
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 22px;
+  width: 22px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(--background-secondary);
+}
+
+input:checked + .slider:before {
+  transform: translateX(22px);
 }
